--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,8 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
-EditorStartupMap=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
-GlobalDefaultGameMode="/Script/Project_CMD.Project_CMDGameMode"
+GameDefaultMap=/Game/MedievalDungeon/Maps/Demonstration.Demonstration
+EditorStartupMap=/Game/MedievalDungeon/Maps/Demonstration.Demonstration
+GlobalDefaultGameMode=/Script/Project_CMD.Project_CMDGameMode
+GameInstanceClass=/Script/Project_CMD.CMDGameInstance
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_12
